RESOLVED FIXED86736
Frame flattening should not expand tiny frames
https://bugs.webkit.org/show_bug.cgi?id=86736
Summary Frame flattening should not expand tiny frames
Antti Koivisto
Reported 2012-05-17 08:13:30 PDT
If a frame has so small fixed size that it is not usefully scrollable on desktop it is probably not mean to be scrolled. We shouldn't expand frames like that.
Attachments
patch (11.49 KB, patch)
2012-05-17 08:22 PDT, Antti Koivisto
kenneth: review+
Antti Koivisto
Comment 1 2012-05-17 08:14:32 PDT
Antti Koivisto
Comment 2 2012-05-17 08:22:31 PDT
Kenneth Rohde Christiansen
Comment 3 2012-05-17 08:31:58 PDT
Comment on attachment 142477 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=142477&action=review > Source/WebCore/ChangeLog:10 > + If a frame has so small fixed size that it is not usefully scrollable on desktop it is probably > + not meant to be scrolled. Displaying any otherwise invisible content by expanding the frame > + may end up looking like a rendering error. Shouldnt we then disable actual scrolling of it?
Antti Koivisto
Comment 4 2012-05-17 08:34:42 PDT
(In reply to comment #3) > Shouldnt we then disable actual scrolling of it? We probably don't want to alter the non-flattened behavior if that's what you mean. Web developers are allowed to do stupid things. We just want to prevent flattening displaying garbage that is not easily visible otherwise.
Antti Koivisto
Comment 5 2012-05-17 08:42:12 PDT
Eric Seidel (no email)
Comment 6 2012-05-17 12:16:29 PDT
Comment on attachment 142477 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=142477&action=review > LayoutTests/fast/frames/flattening/iframe-tiny.html:40 > +<iframe id="testFrame0" width="0px" height="0px" style="border-width:0px" scrolling=auto src="data:text/html, There are nicer ways besides copy/paste :) Also srcdoc= is the new hotness.
alan
Comment 7 2012-05-17 13:11:16 PDT
follow up bug#86770 to reshuffle flattening checking logic.
Note You need to log in before you can comment on or make changes to this bug.