Frame flattening should not expand tiny frames https://bugs.webkit.org/show_bug.cgi?id=86736

Source/WebCore: 

Reviewed by Kenneth Rohde Christiansen.
        
If a frame has so small fixed size that it is not usefully scrollable on desktop it is probably
not meant to be scrolled. Displaying any otherwise invisible content by expanding the frame
may end up looking like a rendering error.

The patch prevents expansion of frames that have fixed width or height less than 8px.

Test: fast/frames/flattening/iframe-tiny.html

* rendering/RenderFrameBase.cpp:
(WebCore::shouldExpandFrame):
(WebCore):
(WebCore::RenderFrameBase::layoutWithFlattening):

LayoutTests: 

Reviewed by Kenneth Rohde Christiansen.

* fast/frames/flattening/iframe-tiny-expected.txt: Added.
* fast/frames/flattening/iframe-tiny.html: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@117451 bbb929c8-8fbe-4397-9dbb-9b2b20218538